# template-rust-lib

./: Cargo.toml  MIT-LICENSE  README.md  release.sh
.github/workflows/: ci.yml  release.yml
src/: lib.rs
