[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2024"
categories = []
description = """
{{project-name}} description.
"""
homepage = "https://github.com/kilork/{{project-name}}"
keywords = []
license = "Unlicense OR MIT"
repository = "https://github.com/kilork/{{project-name}}"
rust-version = "1.87"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
